--- a/llvm-fs.fsproj
+++ b/llvm-fs.fsproj
@@ -57,6 +57,9 @@
     <Compile Include="src\LLVM\Extra.fs">
       <Link>Extra.fs</Link>
     </Compile>
+    <Compile Include="src\LLVM\Target.fs">
+      <Link>Target.fs</Link>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\FSharp\1.0\Microsoft.FSharp.Targets" Condition="!Exists('$(MSBuildBinPath)\Microsoft.Build.Tasks.v4.0.dll')" />
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft F#\v4.0\Microsoft.FSharp.Targets" Condition=" Exists('$(MSBuildBinPath)\Microsoft.Build.Tasks.v4.0.dll')" />
