--- a/llvm-fs.fsproj
+++ b/llvm-fs.fsproj
@@ -62,6 +62,9 @@
     <Compile Include="src\LLVM\Target.fs">
       <Link>Target.fs</Link>
     </Compile>
+    <Compile Include="src\LLVM\Quote.fs">
+      <Link>Quote.fs</Link>
+    </Compile>
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
