--- a/llvm-fs.fsproj
+++ b/llvm-fs.fsproj
@@ -56,6 +56,9 @@
     <Compile Include="src\LLVM\ExecutionEngine.fs">
       <Link>ExecutionEngine.fs</Link>
     </Compile>
+    <Compile Include="src\LLVM\Intrinsic.fs">
+      <Link>Intrinsic.fs</Link>
+    </Compile>
     <Compile Include="src\LLVM\Extra.fs">
       <Link>Extra.fs</Link>
     </Compile>
